getJobPostsByLocation 수정